# Grain

./: .claudeignore  .gitattributes  .gitignore  .mcp.json  .opencode.json  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  CRUSH.md  Cargo.toml  GRAIN_FORK_OVERVIEW.md  README.md  UPSTREAM_TRACKING.md  agent_logs.db  commit_msg.txt  copy_pill.cjs  extension-host.html  extension-surface.html  index.html  jobs.json  lib_bff4db7.diff  lib_bff4db7.rs  package.json  runs2.json  tailwind.config.js  temp_transcription.rs  upstream_paste_delay.patch  upstream_vsredist.patch  vite.config.ts
.gemini/: settings.json  settings.json.bak
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.github/workflows/: build.yml  divergence-ratchet.yml  grain-release.yml  upstream-sync.yml
.nix/: bun-lock-hash  bun.nix
.qoder/: settings.json
Handy Isolation/: PLAN.md  budget.json  ratchet.py
Upstream/: UPSTREAM-DIVERGENCE.md  UPSTREAM.md  UPSTREAMABLE.md  budget.json  data.js  data.json  index.html  merge-report.md  ratchet.py  rerere_cache.py  status.json  sync_upstream.py
Upstream Tracking/: UPSTREAM-DIVERGENCE.md  UPSTREAM.md  data.json  index.html  merge-report.md  script.js  styles.css  sync_upstream.py
Upstream/rr-cache/3f1e0f8820439a2b271697f3c50c5d405dfb4439/: postimage  thisimage
Upstream/rr-cache/5600eb27a352ec4cd59f6014fca563d8665ddb1a/: postimage  thisimage
Upstream/rr-cache/eff31944e372ce63225f04e8806a320d246dc0ca/: preimage
Upstream/rr-cache/f32d4380d5422778cdf95ac1864b4c442d5425ef/: postimage  preimage
crates/engine-lifecycle/: Cargo.toml
crates/engine-lifecycle/src/: lib.rs  manager.rs  testing.rs
crates/grain-asr-core/: Cargo.toml
crates/grain-asr-core/src/: audio_input.rs  events.rs  lib.rs  model.rs  registry.rs  session.rs  stabilizer.rs  testing.rs
crates/grain-asr-sherpa/: Cargo.toml
crates/grain-asr-sherpa/src/: lib.rs  sherpa.rs
crates/grain-core/: Cargo.toml
crates/grain-core/seed/: index.json  index.json.minisig  revocations.json.minisig  roots.json  roots.json.minisig
crates/grain-core/src/: context.rs  event.rs  extensions.rs  install.rs  lib.rs  pack.rs  settings.rs  trust.rs
crates/grain-editor/: Cargo.toml
crates/grain-editor/src/: main.rs  markdown.rs  theme.rs  ui.rs  vault.rs
crates/grain-ext-cli/: Cargo.toml
crates/grain-ext-cli/src/: lib.rs  main.rs
crates/grain-extension-checks/: Cargo.toml
crates/grain-extension-checks/src/: lib.rs
crates/grain-extension-checks/tests/: author_examples.rs
crates/grain-pill/: Cargo.toml
crates/grain-pill/src/: lib.rs  main.rs
crates/grain-registry-tools/: Cargo.toml
crates/grain-registry-tools/src/: main.rs
crates/grain-sdk/: Cargo.toml
crates/grain-sdk/src/: authoring.rs  distribution.rs  error.rs  event.rs  flagged.rs  lib.rs  manifest.rs  pill_theme.rs  protocol.rs  settings_schema.rs
crates/grain-transcribe/: Cargo.toml
crates/grain-transcribe/src/: engines.rs  lib.rs  timing.rs
crates/provider-router/: Cargo.toml
crates/provider-router/src/: lib.rs  model.rs  rotation.rs  router.rs
crates/rolling-window/: Cargo.toml
crates/rolling-window/src/: assembler.rs  chunk_pump.rs  cursor.rs  lib.rs  merge.rs  seam.rs
docs/: Improved Model-Agnostic Native ASR Architecture Plan.md  Model-Agnostic ASR Architecture Research.md  Native ASR UI Design.md  PRODUCT-VISION.md  Rolling Window vNext Plan.md  TRANSITION-LOG.md  UPSTREAM-DIVERGENCE.md  UPSTREAM.md  WHAT-GRAIN-NEEDS.md  grain-features.md
docs/Extension Platform/: AUTHOR-CAPABILITIES.md  AUTHOR-DEBUGGING.md  AUTHOR-EXAMPLES.md  AUTHORING.md  CAPABILITY-GOVERNANCE.md  CASE-HEYCLICKY.md  DISTRIBUTION-PLAN.md  DISTRIBUTION-RESEARCH.md  ERRORS.md  FINAL-REVIEW.md  FREEDOM-LADDER.md  GATE-DISTRIBUTION-AND-DEVMODE.md  PHASE2-GUIDE.md  PHASE3-GUIDE.md  PHASE3-REVIEW.md  PHASE3.5-GUIDE.md  PHASE4-GUIDE.md  PLAN.md  README.md  SETTINGS-AND-UI.md  SPEC.md  STRESS-TEST.md  TRANSITION-LOG.md
docs/Extension Platform/examples/: prompt-pack.grainpack
docs/Grain Space 2.0/: AUTO-CATEGORIZATION-PLAN.md  EXECUTION-PLAN.md  OBSIDIAN-PLAN.md  OBSIDIAN_ROADMAP.md  TAURI-OVERLAY-PLAN.md  TRANSITION-LOG.md  floem-getting-started.md
docs/Grain Space 2.0/Grain space files/: RECALL-PLAN.md  SEARCH-OVERHAUL-PLAN.md
docs/Grain space files/: FINAL-PLAN.md  RECALL-PLAN.md  TRANSITION-LOG.md  modelinfo.md
docs/Handy Isolation/: AUDIT.md  FINAL-AUDIT.md  PLAN.md  UPSTREAMABLE.md  budget.json  ratchet.py
docs/old files/: AGENTS_old.md  ARCHITECTURAL_ANALYSIS.md  FINAL-PLAN.md  Improved Model-Agnostic Native ASR Architecture Plan.md  Rolling Window vNext Plan.md  SpecPlan.md  UPSTREAM-DIVERGENCE.md  UPSTREAM.md  transcribe-cpp Migration Plan.md
docs/old files/Prototype/: agent_pill_prototype.html  (+2 more)
scripts/: run-tauri.ts
src/: App.css  App.tsx  bindings.ts  extension-host.ts  extension-runtime.ts  extension-surface.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: agent.json  default.json  extension-host.json  extension-surface.json  grain-space.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  agent.rs  bridge.rs  cli.rs  clipboard.rs  context_detect.rs  dev_extensions.rs  dictionary.rs  engine_lifecycle.rs  events_auth.rs  events_server.rs  extension_companion.rs  extension_host.rs  extension_session.rs  extension_shortcuts.rs  grain_actions.rs  grain_commands.rs  grain_llm_client.rs  grain_post_process.rs  grain_store.rs  host_api.rs  input.rs  lib.rs  llm_client.rs  main.rs  master_key.rs  overlay.rs  pill_theme.rs  post_process_router.rs  prompt_record.rs  rolling.rs  rotation_state.rs  settings.rs  stt_client.rs  stt_router.rs  transcription_coordinator.rs  tray.rs  utils.rs  voice_actions.rs  voice_command.rs  (+2 more)
src-tauri/tests/: streaming_smoke.rs
src/components/: DotMatrixSplash.tsx  Sidebar.tsx
src/contexts/: ThemeContext.tsx
src/stores/: asrModelStore.ts  ppPoolStore.ts  settingsStore.ts  sttPoolStore.ts
temp/: grain_space_note_prototype.html  index.html  script.js  style.css
website/: index.html  main.js  style.css
(+206 files in other folders)
