[package]
name = "engine-lifecycle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure, Tauri-free lifecycle arbiter for Grain's local heavyweight engines (Batch, Rolling, Native ASR): mutual exclusion, idle-TTL unload, and resident-memory admission control over a ManagedEngine trait. No Tauri, no I/O."

[dependencies]

[dev-dependencies]
