[package]
name = "grain-asr-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-Rust, model-agnostic Native ASR protocol for Grain: streaming session/backend traits, the raw + UI-safe event layers, model spec/capabilities, and the SAPrefix transcript stabilizer. No Tauri, no Sherpa, no network, no audio backend."

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
# Normalized Levenshtein similarity for the SAPrefix stabilizer. Already used by
# the rolling-window crate, so no new third-party surface enters the workspace.
strsim = "0.11"

[dev-dependencies]
