[package]
name = "grain-asr-sherpa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Sherpa-ONNX streaming backend for Grain's Native ASR. Implements grain-asr-core's NativeAsrBackend/AsrSession over the official sherpa-onnx Rust crate. The heavy native dependency is behind the `backend` feature (OFF by default) so the default workspace build never pulls or links it."

[features]
default = []
# Enables the real sherpa-onnx native backend. Pulls the `sherpa-onnx` crate,
# whose build script downloads a prebuilt native lib unless `SHERPA_ONNX_LIB_DIR`
# is set. Keep this OFF in CI/default builds; turn it on deliberately.
backend = ["dep:sherpa-onnx"]

[dependencies]
grain-asr-core = { path = "../grain-asr-core" }
anyhow = { workspace = true }
log = "0.4"
sherpa-onnx = { version = "1.13.3", optional = true }

[dev-dependencies]
# Only used by the `backend`-gated fixture smoke test.
hound = "3"
