[package]
name = "grain-asr-sherpa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Sherpa-ONNX streaming backend for Grain's Native ASR. Implements grain-asr-core's NativeAsrBackend/AsrSession over the official sherpa-onnx Rust crate. The heavy native dependency is behind the `backend` feature (OFF by default) so the default workspace build never pulls or links it."

[features]
default = []
# Enables the real sherpa-onnx native backend. Pulls the `sherpa-onnx` crate,
# whose build script downloads a prebuilt native lib unless `SHERPA_ONNX_LIB_DIR`
# is set. Keep this OFF in CI/default builds; turn it on deliberately.
backend = ["dep:sherpa-onnx"]

[dependencies]
grain-asr-core = { path = "../grain-asr-core" }
anyhow = { workspace = true }
log = "0.4"
# [GRAIN] SHARED (DLL) linking, not the default `static`. The prebuilt Windows
# *static* sherpa lib is built with the static CRT (`/MT`), which collides with
# the rest of the app's dynamic CRT (`/MD`) — LNK2005 duplicate `std::` symbols —
# and would also duplicate onnxruntime, which `ort`/transcribe-rs already links
# statically for the Batch path. Shared linking sidesteps both: sherpa's C API
# and its onnxruntime live in their own DLLs (copied next to the exe by the sys
# build script) and never share symbols with the statically-linked onnxruntime.
sherpa-onnx = { version = "1.13.3", default-features = false, features = [
  "shared",
], optional = true }

[dev-dependencies]
# Only used by the `backend`-gated fixture smoke test.
hound = "3"
