[package]
name = "grain-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless, Tauri-free core for Grain: AppContext (owned settings + event bus + paths), the DaemonEvent stream, and the production settings store (owned JSON, secrets in a separate credential file)."

[dependencies]
# The public wire contract (dependency LEAF - SPEC 7.3): events, actions,
# handshake. grain-core re-exports its types so existing paths keep working.
grain-sdk = { path = "../grain-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
# broadcast channel for the DaemonEvent bus (no Tauri).
tokio = { version = "1", features = ["sync"] }
# OS locale for the app_language default (replaces tauri_plugin_os::locale).
sys-locale = "0.3"
# Type reflection for the eventual frontend bindings — standalone, not Tauri.
specta = { version = "=2.0.0-rc.22", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
