[package]
name = "grain-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless, Tauri-free core for Grain: AppContext (owned settings + event bus + paths), the DaemonEvent stream, and the production settings store (owned JSON, secrets in a separate credential file)."

[dependencies]
# The public wire contract (dependency LEAF - SPEC 7.3): events, actions,
# handshake. grain-core re-exports its types so existing paths keep working.
grain-sdk = { path = "../grain-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
# broadcast channel for the DaemonEvent bus (no Tauri).
tokio = { version = "1", features = ["sync"] }
# OS locale for the app_language default (replaces tauri_plugin_os::locale).
sys-locale = "0.3"
# Type reflection for the eventual frontend bindings — standalone, not Tauri.
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
# [GRAIN] Phase 5A trust rails: pinned-key Ed25519 verification of the signed
# catalogue (same minisign shape as Grain's own updater, C-10) + artifact hash.
minisign-verify = "0.2.5"
sha2 = "0.10"                                   # match src-tauri (one copy)
# RFC 3339 `expires` parsing only; `now` is injected so the verifier stays pure.
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
