[package]
name = "grain-extension-checks"
version = "0.1.0"
description = "Shared local and CI checks for Grain extension projects"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
grain-sdk = { path = "../grain-sdk" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
