[package]
name = "provider-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure provider routing + smart rotation: per-provider cooldowns, live rate-limit headroom, round-robin/smart-rotate strategies. Ported from Grain's Python router.py/llm_rotation.py."

[dependencies]

[dev-dependencies]
