[package]
name = "rolling-window"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure rolling-window transcription engine: absolute-frame cursor, timeline assembler, serialized chunk pump. No Tauri, no I/O — ported from Grain's Python ChunkedAudioService/TimelineAssembler."

[dependencies]
strsim = "0.11"

[dev-dependencies]
